# claude-exp

./: .gitignore  CLAUDE.md  DOCS.md  README.md  pyproject.toml
.claude/commands/: implement.md  plan.md
.github/workflows/: test.yaml
specs/: PLAN-001-claude-command-deployer.md  PLAN-002-deployment-source-config.md  PLAN-003-update-backup-protection.md  PLAN-004-backup-consolidation-refactor.md  PLAN-004-cli-architecture-refactor.md  PLAN-005-main-module-refactor.md  SPEC-001-claude-command-deployer.md  SPEC-002-deployment-source-config.md  SPEC-003-update-backup-protection.md  SPEC-004-backup-consolidation-refactor.md  SPEC-004-cli-architecture-refactor.md  SPEC-005-main-module-refactor.md
src/specli/: __init__.py  backup.py  config.py  filesystem.py  github.py  main.py  operations.py  output.py  validation.py
tests/: test_acceptance.py  test_acceptance_backup.py  test_backup.py  test_cli.py  test_cli_utils.py  test_config.py  test_filesystem.py  test_github.py  test_operations.py
